Wrap inline button with adjacent word; fix review URL overflow again

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -700,6 +700,10 @@ a#add-description {
   margin-left:0.5em;
 }
 
+a#add-description span.fa {
+  display:inline !important;
+}
+
 .content-meta {
   font-size:small;
   display:flex;
@@ -878,6 +882,7 @@ hr.feed-separator, hr.team-separator {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display:block;
 }
 
 .review-text {
